cmake_minimum_required(VERSION 4.0)
project(cpp_refresher)

set(CMAKE_CXX_STANDARD 14)

add_executable(cpp_refresher
        main.cpp
        excercise.cpp
        excercise1.cpp
        ex03.cpp
        ex04.cpp
        ex05.cpp
        0001format.cpp
        main_datatypes.cpp
        ex06.cpp
        ex007.cpp
        ex008.cpp
        ex009.cpp)
